# AoC24

./: .gitignore  CMakeLists.txt  README.md
src/days/: CMakeLists.txt  day00.cc  day01.cc
src/lib/: CMakeLists.txt  utils.cc  utils.h
